[package]
name = "unsupervised-learning-netflix"
version = "0.1.0"
authors = ["Peter Rong <PeterRong96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.106", features = ["derive"]}
rusty-machine = "0.5.4"
chrono = "0.4"