[package]
name = "recommend-netflix"
version = "0.1.0"
authors = ["Peter Rong <PeterRong96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
nalgebra = "0.21.0"
# chrono = "0.4"
# stopwatch = "0.0.7"
log = "0.4"
pretty_env_logger = "0.3"
elapsed = "0.1.2"
itertools = "0.9.0"
inventory = "0.1.6"
plotters = "0.2.12"